<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="324dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/pizza_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:text="@string/pizza_app_name"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adress_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/adress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adress_text_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pizza_type"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/miniButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mini" />
                <RadioButton
                    android:id="@+id/moyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Moyenne" />
                <RadioButton
                    android:id="@+id/maxiButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Maxi" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/fromageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fromage" />
            <CheckBox
                android:id="@+id/champignonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Champignon" />
            <CheckBox
                android:id="@+id/roquetteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Roquette" />
            <CheckBox
                android:id="@+id/jambonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jambon" />
            <CheckBox
                android:id="@+id/olivesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Olives"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/shr_button_next" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/next_button"
                    android:layout_toLeftOf="@id/next_button"
                    android:text="@string/shr_button_cancel" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>